@@ -35,7 +35,7 @@ namespace Mono.Cecil.Metadata {
 	using Mono.Cecil;
 	using Mono.Cecil.Binary;
 
-	class MetadataInitializer : BaseMetadataVisitor {
+	sealed class MetadataInitializer : BaseMetadataVisitor {
 
 		MetadataRoot m_root;
 
