@@ -1,4 +1,14 @@
-2008-06-28  Sebastien Pouliot  <sebastien@ximian.com> 
+2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Mono.Cecil.Metadata/CultureUtils.cs
+	* Mono.Cecil.Metadata/MetadataInitializer.cs
+	* Mono.Cecil.Metadata/MetadataReader.cs
+	* Mono.Cecil.Metadata/MetadataRowReader.cs
+	* Mono.Cecil.Metadata/MetadataRowWriter.cs
+	* Mono.Cecil.Metadata/MetadataTableReader.cs
+	* Mono.Cecil.Metadata/Utilities.cs:
+		Seal non-visible classes.
+		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]
 
 	* Mono.Cecil.Cil/CodeReader.cs
 	* Mono.Cecil.Cil/OpCodeNames.cs
